--- a/index.css
+++ b/index.css
@@ -9,6 +9,18 @@ body{
     height: 100%;
 }
 
+.jump_button{
+    z-index: 10;
+    background-color: tomato;
+    padding: 10px;
+    border-radius: 30px;
+    position: fixed; 
+    top: 90%; 
+    right: 2.5%;
+    text-decoration: none;
+    color: black;
+}
+
 /* Navbar styling */
 .navbar{
     background-color: mintcream;
@@ -305,6 +317,7 @@ body{
     margin: 30px 0px;
 }
 .categories_section p{
+    color: black;
     margin: 0;
 }
 .category_grid{
@@ -313,7 +326,10 @@ body{
     gap: 10px;
     justify-items: stretch;
 }
-.category_grid > .item{
+.category_grid a{
+    text-decoration: none;
+}
+.category_grid .item{
     padding: 20px;
     background-color: mintcream;
     display: flex;
@@ -325,7 +341,7 @@ body{
     transition: all 0.2s ease-in-out;
     cursor: pointer;
 }
-.category_grid > .item:hover{
+.category_grid .item:hover{
     border-top: 3px solid #2E8BC0;
     border-bottom: 5px solid #2E8BC0;
     border-left: 3px solid #2E8BC0;
@@ -372,6 +388,7 @@ body{
     padding: 10px;
     display: none;
     background-color: mintcream;
+    margin-bottom: 10px;
 }
 .faq_answer p{
     margin: 0;
